Fixing update e insert dell'admin panel