@@ -1,11 +1,11 @@
 package GUI.Components;
 
+import GUI.AdminPageGUI;
 import GUI.AppView;
 
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
 import java.awt.event.ActionEvent;
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
@@ -22,7 +22,9 @@ public class PresentationHallsCrudTable extends CrudTable {
             try {
                 Map<String, String> formData = this.createView.getFormData();
                 parentView.getAppController().insertPresentationHallIntoDatabase(formData.get("Nome"), formData.get("Indirizzo"));
-            }catch (Exception exception){
+                parentView.getAppController().switchView(new AdminPageGUI(parentView.getAppController(), new PresentationHallsCrudTable(parentView, "Librerie:", new String[]{"id", "nome", "indirizzo"}, parentView.getAppController().getRenderedPresentationHalls())));
+                JOptionPane.showMessageDialog(parentView.getContentPane(), "Inserimento effettuato con successo", "Successo!", JOptionPane.INFORMATION_MESSAGE);
+            } catch (Exception exception){
                 JOptionPane.showMessageDialog(parentView.getContentPane(), exception.getMessage(), "!!!Errore!!!", JOptionPane.ERROR_MESSAGE);
             }
         });
@@ -66,7 +68,7 @@ public class PresentationHallsCrudTable extends CrudTable {
     @Override
     protected Map<String, JComponent> getFormSchema(ArrayList<String> data) {
         Map<String, JComponent> schema = new HashMap<>();
-        schema.put("Nome", new JTextField(data.getFirst()));
+        schema.put("Nome", new JTextField(data.get(0)));
         schema.put("Indirizzo", new JTextField(data.get(1)));
         return schema;
     }
